[package]
name = "ignore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3.21"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
