[package]
name = "igno"
description = "Generate gitignore files with ease"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
homepage = "https://github.com/ravern/igno"
documentation = "https://docs.rs/igno"
repository = "https://github.com/ravern/igno"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["gitignore", "git"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3.21"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
